@@ -1464,8 +1464,14 @@ int main(int argc, char **argv, char **envp)
 
 sqInt ioExit(void)
 {
+  return ioExitWithErrorCode(0);
+}
+
+sqInt ioExitWithErrorCode(int ec)
+{
   dpy->winExit();
-  exit(0);
+  exit(ec);
+  return ec;
 }
 
 #if defined(DARWIN)
