@@ -1400,10 +1400,15 @@ int inCleanExit = 0;
 
 int ioExit(void)
 {
+  return ioExitWithErrorCode(0);
+}
+
+sqInt ioExitWithErrorCode(int ec)
+{
   inCleanExit = 1;
-  exit(0);
+  exit(ec);
   /* avoid the warnings here */
-  return 0;
+  return ec;
 }
 
 int ioBeep(void)
